Resolve education and achievement section responsiveness

--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
       .navbar-nav { padding-top: 1rem; background: var(--bg-light); padding-bottom: 1rem; }
       .nav-link { margin-left: 0; padding: 10px 0; }
       .hero-section { padding-top: 100px; text-align: center; }
+      .navbar-nav { padding-top: 1rem; background: var(--bg-light); padding-bottom: 1rem; }
+      .nav-link { margin-left: 0; padding: 10px 0; }
+      .hero-section { padding-top: 100px; text-align: center; }
+
+      .feature-card {
+        height: auto !important;
+        margin-bottom: 15px;
+      }
+      .row.g-4 > [class*="col-"] {
+        margin-bottom: 1rem;
+      }
     }
 
     @media (max-width: 575.98px) {
